# Sultan

./: db.db  main.py  pyproject.toml
static/css/: style.css
static/js/: script.js
templates/: actors.html  congrats.html  footer.html  header.html  history.html  home.html  index.html  login.html  regin.html
