[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "sultan"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
passlib = "^1.7"
poetry = "^1.0"
pyproject = "^1.3"
python = "^3.8"
[tool.poetry.dev-dependencies]
